check-ip.c
/* Generated by re2c 0.13.5 on Sun Apr 26 02:55:22 2009 */
#line 1 "check-ip.re"
#include <stdlib.h>
#include <stdio.h>
#include <string.h>

int scan(char *s, int l)
{
    char *p = s;
    char *q = 0;
#define YYCTYPE         char
#define YYCURSOR        p
#define YYLIMIT         (s+l)
#define YYMARKER        q
#define YYFILL(n)

    for(;;)
    {

#line 21 "<stdout>"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;

	if ((YYLIMIT - YYCURSOR) < 15) YYFILL(15);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':	goto yy2;
	case '1':	goto yy4;
	case '2':	goto yy5;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy6;
	default:	goto yy7;
	}
yy2:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy3;
	default:	goto yy10;
	}
yy3:
#line 19 "check-ip.re"
	{ return 1; }
#line 51 "<stdout>"
yy4:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy3;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy257;
	default:	goto yy10;
	}
yy5:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy3;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy192;
	case '5':	goto yy191;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy8;
	default:	goto yy10;
	}
yy6:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy3;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy8;
	default:	goto yy10;
	}
yy7:
	yych = *++YYCURSOR;
	goto yy3;
yy8:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy135;
	case '1':	goto yy136;
	case '2':	goto yy137;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy138;
	default:	goto yy10;
	}
yy9:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
	case 0: 	goto yy3;
	case 1: 	goto yy24;
	}
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy11;
	case '1':	goto yy12;
	case '2':	goto yy13;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy14;
	default:	goto yy9;
	}
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	default:	goto yy16;
	}
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy134;
	default:	goto yy16;
	}
yy13:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy91;
	case '5':	goto yy90;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy15;
	default:	goto yy16;
	}
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy15;
	default:	goto yy16;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy58;
	case '1':	goto yy59;
	case '2':	goto yy60;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy61;
	default:	goto yy16;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy17;
	case '1':	goto yy18;
	case '2':	goto yy19;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy20;
	default:	goto yy9;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	default:	goto yy22;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy57;
	default:	goto yy22;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy43;
	case '5':	goto yy42;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy21;
	default:	goto yy22;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy21;
	default:	goto yy22;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy31;
	case '1':	goto yy32;
	case '2':	goto yy33;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy23;
	case '1':	goto yy25;
	case '2':	goto yy26;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy27;
	default:	goto yy9;
	}
yy23:
	++YYCURSOR;
yy24:
#line 18 "check-ip.re"
	{ return 0; }
#line 318 "<stdout>"
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy30;
	default:	goto yy24;
	}
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy29;
	case '5':	goto yy28;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	default:	goto yy24;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	default:	goto yy24;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':	goto yy23;
	default:	goto yy24;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	default:	goto yy24;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	default:	goto yy24;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy23;
	case '1':	goto yy25;
	case '2':	goto yy26;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy27;
	default:	goto yy24;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy30;
	case '1':	goto yy39;
	case '2':	goto yy40;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy41;
	default:	goto yy24;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy29;
	case '1':	goto yy35;
	case '2':	goto yy36;
	case '3':
	case '4':	goto yy37;
	case '5':	goto yy38;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy27;
	default:	goto yy24;
	}
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy23;
	case '1':	goto yy25;
	case '2':	goto yy26;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy27;
	default:	goto yy24;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy30;
	default:	goto yy24;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy29;
	case '5':	goto yy28;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	default:	goto yy24;
	}
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	default:	goto yy24;
	}
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	default:	goto yy24;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy30;
	default:	goto yy24;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy29;
	case '5':	goto yy28;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	default:	goto yy24;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	default:	goto yy24;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':	goto yy47;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy44:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy31;
	case '1':	goto yy32;
	case '2':	goto yy33;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy45:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy53;
	case '1':	goto yy54;
	case '2':	goto yy55;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy56;
	default:	goto yy22;
	}
yy46:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy48;
	case '1':	goto yy49;
	case '2':	goto yy50;
	case '3':
	case '4':	goto yy51;
	case '5':	goto yy52;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy47:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy31;
	case '1':	goto yy32;
	case '2':	goto yy33;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy23;
	case '1':	goto yy25;
	case '2':	goto yy26;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy27;
	default:	goto yy24;
	}
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy30;
	case '1':	goto yy39;
	case '2':	goto yy40;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy41;
	default:	goto yy24;
	}
yy50:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy29;
	case '1':	goto yy35;
	case '2':	goto yy36;
	case '3':
	case '4':	goto yy37;
	case '5':	goto yy38;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy27;
	default:	goto yy24;
	}
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy23;
	case '1':	goto yy25;
	case '2':	goto yy26;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy27;
	default:	goto yy24;
	}
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy23;
	case '1':	goto yy25;
	case '2':	goto yy26;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy27;
	default:	goto yy24;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy23;
	case '1':	goto yy25;
	case '2':	goto yy26;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy27;
	default:	goto yy24;
	}
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy30;
	case '1':	goto yy39;
	case '2':	goto yy40;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy41;
	default:	goto yy24;
	}
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy29;
	case '1':	goto yy35;
	case '2':	goto yy36;
	case '3':
	case '4':	goto yy37;
	case '5':	goto yy38;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy27;
	default:	goto yy24;
	}
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy23;
	case '1':	goto yy25;
	case '2':	goto yy26;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy27;
	default:	goto yy24;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy58:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy21;
	case '1':	goto yy62;
	case '2':	goto yy63;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy64;
	default:	goto yy22;
	}
yy59:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy57;
	case '1':	goto yy87;
	case '2':	goto yy88;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy89;
	default:	goto yy22;
	}
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy43;
	case '1':	goto yy83;
	case '2':	goto yy84;
	case '3':
	case '4':	goto yy85;
	case '5':	goto yy86;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy64;
	default:	goto yy22;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy21;
	case '1':	goto yy62;
	case '2':	goto yy63;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy64;
	default:	goto yy22;
	}
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy79;
	case '1':	goto yy80;
	case '2':	goto yy81;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy82;
	default:	goto yy22;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy65;
	case '1':	goto yy66;
	case '2':	goto yy67;
	case '3':
	case '4':	goto yy68;
	case '5':	goto yy69;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy64:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy65:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy66:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy75;
	case '1':	goto yy76;
	case '2':	goto yy77;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy78;
	default:	goto yy22;
	}
yy67:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy70;
	case '1':	goto yy71;
	case '2':	goto yy72;
	case '3':
	case '4':	goto yy73;
	case '5':	goto yy74;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy68:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy69:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':	goto yy47;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy70:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy31;
	case '1':	goto yy32;
	case '2':	goto yy33;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy71:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy53;
	case '1':	goto yy54;
	case '2':	goto yy55;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy56;
	default:	goto yy22;
	}
yy72:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy48;
	case '1':	goto yy49;
	case '2':	goto yy50;
	case '3':
	case '4':	goto yy51;
	case '5':	goto yy52;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy73:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy31;
	case '1':	goto yy32;
	case '2':	goto yy33;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy74:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy31;
	case '1':	goto yy32;
	case '2':	goto yy33;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy75:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy31;
	case '1':	goto yy32;
	case '2':	goto yy33;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy76:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy53;
	case '1':	goto yy54;
	case '2':	goto yy55;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy56;
	default:	goto yy22;
	}
yy77:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy48;
	case '1':	goto yy49;
	case '2':	goto yy50;
	case '3':
	case '4':	goto yy51;
	case '5':	goto yy52;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy78:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy31;
	case '1':	goto yy32;
	case '2':	goto yy33;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	default:	goto yy22;
	}
yy79:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy80:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy75;
	case '1':	goto yy76;
	case '2':	goto yy77;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy78;
	default:	goto yy22;
	}
yy81:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy70;
	case '1':	goto yy71;
	case '2':	goto yy72;
	case '3':
	case '4':	goto yy73;
	case '5':	goto yy74;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy82:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy83:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy79;
	case '1':	goto yy80;
	case '2':	goto yy81;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy82;
	default:	goto yy22;
	}
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy65;
	case '1':	goto yy66;
	case '2':	goto yy67;
	case '3':
	case '4':	goto yy68;
	case '5':	goto yy69;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy85:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy86:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy87:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy79;
	case '1':	goto yy80;
	case '2':	goto yy81;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy82;
	default:	goto yy22;
	}
yy88:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy65;
	case '1':	goto yy66;
	case '2':	goto yy67;
	case '3':
	case '4':	goto yy68;
	case '5':	goto yy69;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy89:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy90:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy92;
	case '1':	goto yy93;
	case '2':	goto yy94;
	case '3':
	case '4':
	case '5':	goto yy95;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy61;
	default:	goto yy16;
	}
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy92;
	case '1':	goto yy93;
	case '2':	goto yy94;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy95;
	default:	goto yy16;
	}
yy92:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy97;
	case '1':	goto yy98;
	case '2':	goto yy99;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy100;
	default:	goto yy96;
	}
yy93:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy130;
	case '1':	goto yy131;
	case '2':	goto yy132;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy133;
	default:	goto yy96;
	}
yy94:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy125;
	case '1':	goto yy126;
	case '2':	goto yy127;
	case '3':
	case '4':	goto yy128;
	case '5':	goto yy129;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy100;
	default:	goto yy96;
	}
yy95:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy97;
	case '1':	goto yy98;
	case '2':	goto yy99;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy100;
	default:	goto yy96;
	}
yy96:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':	goto yy120;
	case '1':	goto yy121;
	case '2':	goto yy122;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy123;
	default:	goto yy9;
	}
yy97:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy44;
	case '1':	goto yy101;
	case '2':	goto yy102;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy103;
	default:	goto yy22;
	}
yy98:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy79;
	case '1':	goto yy117;
	case '2':	goto yy118;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy119;
	default:	goto yy22;
	}
yy99:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy65;
	case '1':	goto yy113;
	case '2':	goto yy114;
	case '3':
	case '4':	goto yy115;
	case '5':	goto yy116;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy103;
	default:	goto yy22;
	}
yy100:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy9;
	case '0':	goto yy44;
	case '1':	goto yy101;
	case '2':	goto yy102;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy103;
	default:	goto yy22;
	}
yy101:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy109;
	case '1':	goto yy110;
	case '2':	goto yy111;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy112;
	default:	goto yy22;
	}
yy102:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy105;
	case '1':	goto yy106;
	case '2':	goto yy107;
	case '3':
	case '4':	goto yy108;
	case '5':	goto yy104;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy22;
	}
yy103:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy24;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
